Mika Halonens code cleanup